# o11a-backend

./: .gitignore  CLAUDE.md  Cargo.toml  GETTING_STARTED.md  README.md  TODO.md
crates/o11a-analyze/: Cargo.toml
crates/o11a-analyze/docs/build-plans/: conditions-step-6.md  invariants-step-8.md  pipeline-dag.md  planned.md  semantic-resolution-graph-baseline.md  semantic-resolution-graph.md  system-characteristics.md  threats-step-7.md  transitive-effects.md  validation-step-10.md
crates/o11a-analyze/docs/specs/: semantic-resolution-graph.md
crates/o11a-analyze/src/: analysis.rs  lib.rs  main.rs
crates/o11a-analyze/src/cmd/: analyze.rs  dump.rs  mod.rs  normalize_docs.rs
crates/o11a-analyze/src/documentation/: analyzer.rs  parser.rs  resolution_pass.rs  resolution_pass_tests.rs
crates/o11a-analyze/src/rust/: analyzer.rs  dev_doc_resolution_pass.rs  parser.rs  transform.rs
crates/o11a-analyze/src/solidity/: analyzer.rs  dev_doc_resolution_pass.rs  dev_doc_resolution_pass_tests.rs  effective_properties.rs  parser.rs  transform.rs
crates/o11a-core/: Cargo.toml  README.md  SPEC.md
crates/o11a-core/src/: analysis_artifact.rs  audit_dump.rs  code_refs.rs  feature_lookup.rs  ids.rs  lib.rs  report.rs  state.rs
crates/o11a-core/src/api/: handlers.rs  mod.rs  routes.rs
crates/o11a-core/src/collaborator/: db.rs  mod.rs  models.rs  parser.rs  scope_info.rs  synthetic.rs
crates/o11a-core/src/collaborator/agent/: context.rs  function_dag.rs  log.rs  mod.rs  pipeline.rs  router.rs  semantic_linking.rs  task.rs
crates/o11a-core/src/collaborator/agent/semantic_linking/: bm25.rs  compare.rs  trace.rs
crates/o11a-core/src/collaborator/agent/semantic_linking/bm25/: corpus.rs  score.rs  tokenize.rs
crates/o11a-core/src/collaborator/db/: mod.rs  user_entities.rs
crates/o11a-core/src/core/: mod.rs  topic.rs
crates/o11a-core/src/db/: mod.rs
crates/o11a-core/src/documentation/: analyzer.rs  ast.rs  mod.rs  parser.rs
crates/o11a-core/src/domain/: mod.rs  topic.rs
crates/o11a-core/src/resolution_graph/: builder.rs  coloc.rs  edge.rs  graph.rs  mod.rs  pagerank.rs  rust_extractor.rs  solidity_extractor.rs  trace.rs
crates/o11a-core/src/rust/: ast.rs  mod.rs
crates/o11a-core/src/solidity/: analyzer.rs  ast.rs  delimiter.rs  mod.rs  parser.rs  transform.rs
crates/o11a-server/: Cargo.toml  README.md
crates/o11a-server/src/: main.rs  websocket.rs
crates/o11a-server/src/api/: error.rs  handlers.rs  routes.rs
crates/o11a-web-backend/: Cargo.toml  README.md  SPEC.md
crates/o11a-web-backend/src/: comment_formatter.rs  documentation_formatter.rs  formatting.rs  handlers.rs  lib.rs  routes.rs  solidity_formatter.rs  state.rs  topic_view.rs
docs/: follow_up_prompts.md  frontend_migration_guide.md  refactor-conversation-rendering.md
docs/specs/: semantic-linking.md
src/: main.rs
src/api/: handlers.rs  routes.rs  topic_view.rs
src/collaborator/: db.rs  formatter.rs  mod.rs  models.rs  parser.rs
src/collaborator/agent/: context.rs  log.rs  mod.rs  pipeline.rs  router.rs  task.rs
src/core/: mod.rs  topic.rs
src/db/: mod.rs
src/documentation/: analyzer.rs  formatter.rs  parser.rs
src/solidity/: analyzer.rs  formatter.rs  parser.rs  transform.rs
