[package]
name = "o11a-analyze"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
name = "o11a-analyze"
path = "src/main.rs"

[dependencies]
o11a-core = { path = "../o11a-core" }
foundry-compilers = "0.18.0"
foundry-compilers-artifacts = "0.18.0"
markdown = "=1.0.0-alpha.20"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = { version = "2", features = ["serde"] }
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
