[package]
name = "o11a-core"
version = "0.1.0"
edition = "2024"

[dependencies]
foundry-compilers = "0.18.0"
foundry-compilers-artifacts = "0.18.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
markdown = "=1.0.0-alpha.20"
regex = "1.10"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
