[package]
name = "o11a-server"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "o11a-server"
path = "src/main.rs"

[dependencies]
o11a-core = { path = "../o11a-core" }
o11a-web-backend = { path = "../o11a-web-backend" }
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
futures = "0.3"
