[package]
name = "o11a-web-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
o11a-core = { path = "../o11a-core" }
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
